# cookiecutter-python

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: README.md  pyproject.toml
{{cookiecutter.project_slug}}/: .bumpversion.cfg  LICENSE  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: main.yaml  main.yml
{{cookiecutter.project_slug}}/tests/: test_integration.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py
