[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.initial_version}}"
description = "{{cookiecutter.description}}"
license = "MIT"
authors = ["{{cookiecutter.username}} <{{cookiecutter.email}}>"]
readme = "README.md"
repository = "https://github.com/{{cookiecutter.username}}/{{cookiecutter.project_slug}}"

[tool.poetry.dependencies]
python = "^3.8.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
bump2version = "^1.0.1"
black = "^20.8b1"

[tool.black]
skip_string_normalization = true
