[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.initial_version}}"
description = "{{cookiecutter.description}}"
license = "MIT"
authors = ["{{cookiecutter.username}} <{{cookiecutter.email}}>"]
readme = "README.md"
repository = "https://github.com/{{cookiecutter.username}}/{{cookiecutter.project_slug}}"

[tool.poetry.dependencies]
python = "^3.8.0"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
black = "^20.8b1"
pytest = "^6.2.1"
pytest-markdown = "^1.0.2"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
